# python-data-cleaning-package

./: .pre-commit-config.yaml  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_template.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_python_data_cleaning_package.py  test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: cli.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/clean/: __init__.py  main.py  utils.py
